--- a/config/seq-example.yml
+++ b/config/seq-example.yml
@@ -55,3 +55,9 @@ log:
   # Error Level(包含) 以上的log是否單獨輸出
   # 不跟Info Level(包含) 以下的log輸出在同一個位置
   errorAloneOutput: false
+  # log採樣基數
+  sampling:
+    # 當前Sync log數量大於此數字就會開始採樣
+    initial: 100
+    # 採樣機率
+    thereafter: 10
